--- a/styles/components/tag.scss
+++ b/styles/components/tag.scss
@@ -3,7 +3,6 @@
   border-radius: 4px;
   padding: 3px 6px;
   font-size: 12px;
-  font-weight: 700;
   color: $color-grey-600;
 
   &.-blue {
@@ -32,5 +31,12 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+  }
+
+  &.-xl {
+    padding: 8px 8px;
+    font-size: 18px;
+    font-weight: $font-bold;
+    border-radius: 6px;
   }
 }
