feat: add panel component

--- a/styles/components/_all.scss
+++ b/styles/components/_all.scss
@@ -3,5 +3,6 @@
 @import "chip.scss";
 @import "field.scss";
 @import "header.scss";
+@import "panel.scss";
 @import "table.scss";
 @import "tag.scss";
